--- a/app/src/main/res/layout/activity_onboard1.xml
+++ b/app/src/main/res/layout/activity_onboard1.xml
@@ -56,8 +56,7 @@
         android:layout_width="357dp"
         android:layout_height="36dp"
         android:layout_marginTop="28dp"
-        android:text="Telah hadir aplikasi untuk mempermudah
-Anda dalam membeli plafon tanpa ribet."
+        android:text="di Toko Penjualan Dan Pemasangan Mantap Plafon"
         android:fontFamily="@font/poppins_medium"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
